chỉnh lại tiếng việt tất cả trong trang admin

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -9,10 +9,10 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Speaker</h2>
+                <h2 class="col-sm-10">Quản Lý Diễn Giả</h2>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSpeakerModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Speaker
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -23,34 +23,34 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Add Speaker</h4>
+                            <h4 class="modal-title">Thêm Diễn Giả</h4>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Name:</label>
+                                <label class="col-sm-3 form-control-label">Tên:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input id="newName" type="text" class="form-control" placeholder="Enter Speaker's name">
+                                    <input id="newName" type="text" class="form-control" placeholder="Nhập tên diễn giả">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Description:</label>
+                                <label class="col-sm-3 form-control-label">Miêu Tả:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-info" aria-hidden="true"></i>
                                     </div>
-                                    <textarea id="newDescription" type="text" class="form-control" placeholder="Enter Description"></textarea>
+                                    <textarea id="newDescription" type="text" class="form-control" placeholder="Nhập miêu tả về diễn giả"></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Image:</label>
+                                <label class="col-sm-3 form-control-label">Hình Ảnh:</label>
                                 <div class="col-sm-9 input-group">
                                     <div class="input-group-addon">
                                         <i class="fa fa-link" aria-hidden="true"></i>
                                     </div>
-                                    <textarea id="newImageUrl" type="text" class="form-control" placeholder="Input image url"></textarea>
+                                    <textarea id="newImageUrl" type="text" class="form-control" placeholder="Nhập đường dẫn của hình ảnh"></textarea>
                                 </div>
                                 <div class="col-sm-3"></div>
                                 <div class="row col-sm-9">
@@ -60,8 +60,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Add</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                         </div>
                     </div>
 
@@ -73,10 +73,10 @@
             <table class="table table-hover table-bordered" id="tblSpeaker">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Image</th>
-                        <th>Function</th>
+                        <th>Tên</th>
+                        <th>Miêu Tả</th>
+                        <th>Hình Ảnh</th>
+                        <th>Chức Năng</th>
                     </tr>
                 </thead>
             </table>
@@ -88,14 +88,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h2 class="modal-title">Are your sure?</h2>
+                        <h2 class="modal-title">Bạn có chắc?</h2>
                     </div>
                     <div class="modal-body">
                         <h3 class="speaker-del-title"></h3>
                     </div>
                     <div class="modal-footer">
-                        <button id="btn-del" type="button" class="btn btn-default speaker-del-id" data-dismiss="modal">Delete</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button id="btn-del" type="button" class="btn btn-default speaker-del-id" data-dismiss="modal">Xóa</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                     </div>
                 </div>
             </div>
@@ -106,11 +106,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Edit Speaker</h4>
+                        <h4 class="modal-title">Chỉnh Sửa Diễn Giả</h4>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Name:</label>
+                            <label class="col-sm-3 form-control-label">Tên:</label>
                             <div class="col-sm-9 input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-briefcase" aria-hidden="true"></i>
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Descripstion:</label>
+                            <label class="col-sm-3 form-control-label">Miêu tả:</label>
                             <div class="col-sm-9 input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-info" aria-hidden="true"></i>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Image:</label>
+                            <label class="col-sm-3 form-control-label">Hình Ảnh:</label>
                             <div class="col-sm-9 input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-link" aria-hidden="true"></i>
@@ -144,8 +144,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button id="btn-save" type="submit" class="btn btn-primary speaker-id" data-dismiss="modal" style="margin-top:5px">Save change</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button id="btn-save" type="submit" class="btn btn-primary speaker-id" data-dismiss="modal" style="margin-top:5px">Lưu</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
 
          function delSpeaker(id, name) {
             $('.speaker-del-id').val(id);
-            $('.speaker-del-title').html("Delete Speaker " + name);
+            $('.speaker-del-title').html("Xóa Diễn Giả " + name);
         }
 
          $(document).ready(function () {
