--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Activity/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Activity/Index.cshtml
@@ -20,10 +20,10 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Manage Activity</h2>
+                <h2 class="col-sm-10">Quản Lý Hoạt Động</h2>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addActivityModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Activity
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -46,11 +46,11 @@
                         <table class="table table-hover table-bordered" id="tblActivity@(i)">
                             <thead>
                                 <tr>
-                                    <th>Activity Name</th>
-                                    <th>Start Time - End Time</th>
-                                    <th>Description</th>
-                                    <th>Session Name</th>
-                                    <th>Function</th>
+                                    <th>Tên Hoạt Động</th>
+                                    <th>Thời Gian Bắt đầu - Kết thúc</th>
+                                    <th>Miêu Tả</th>
+                                    <th>Tên phiên làm việc</th>
+                                    <th>Chức Năng</th>
                                 </tr>
                             </thead>
                         </table>
@@ -63,7 +63,7 @@
 
 
     </div>
-   
+
 </div>
 
 
@@ -71,25 +71,25 @@
 <div class="modal fade" id="addActivityModal" role="dialog">
     <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Thêm Hoạt Động</h4>
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Thêm Hoạt Động</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Tên Hoạt Động:</label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Tên Hoạt Động:</label>
-                                <div class="col-sm-9 input-group">
-                                    <div class="input-group-addon">
-                                        <i class="fa fa-briefcase" aria-hidden="true"></i>
-                                    </div>
-                                    <input type="text" class="form-control" id="addName" placeholder="Nhập tên hoạt động">
-                                </div>
-                            </div>
+                        <input type="text" class="form-control" id="addName" placeholder="Nhập tên hoạt động">
+                    </div>
+                </div>
 
-                            <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Ngày Giờ:</label>
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Ngày Giờ:</label>
 
                     <div class="input-group col-sm-9">
                         <div class="input-group-addon">
@@ -99,41 +99,43 @@
                     </div>
                 </div>
 
-                            <div class="form-group">
-                                <label class="col-sm-3 form-control-label">Miêu Tả:</label>
-                                <div class="col-sm-9 input-group">
-                                    <div class="input-group-addon">
-                                        <i class="fa fa-info" aria-hidden="true"></i>
-                                    </div>
-                                    <input type="text" class="form-control" id="addDescription" placeholder="Nhập miêu tả hoạt động">
-                                </div>
-                            </div>
-
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Miêu Tả:</label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-info" aria-hidden="true"></i>
                         </div>
-                        <div class="modal-footer">
-                            <button id="addActivity" data-dismiss="modal" type="button" class="btn btn-primary">Thêm</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-                        </div>
+                        <input type="text" class="form-control" id="addDescription" placeholder="Nhập miêu tả hoạt động">
                     </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button id="addActivity" data-dismiss="modal" type="button" class="btn btn-primary">Thêm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+            </div>
+        </div>
 
     </div>
 </div>
 
         </div>
-        <div class="box-body">
-            <table class="table table-hover table-bordered" id="tblActivity">
-                <thead>
-                    <tr>
-                        <th>Tên hoạt động</th>
-                        <th>Thời gian bắt đầu - kết thúc</th>
-                        <th>Miêu tả</th>
-                        <th>Tên phiên</th>
-                        <th>Chức năng</th>
-                    </tr>
-                </thead>
-            </table>
-        </div>
+<div class="box-body">
+    <table class="table table-hover table-bordered" id="tblActivity">
+        <thead>
+            <tr>
+                <th>Tên hoạt động</th>
+                <th>Thời gian bắt đầu - kết thúc</th>
+                <th>Miêu tả</th>
+                <th>Tên phiên</th>
+                <th>Chức năng</th>
+            </tr>
+        </thead>
+    </table>
+</div>
     </div>
+</div>
+</div>
 </div>
 
 <!-- Modal -->
