--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="col-sm-4">
             <div class="row down pull-left">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#modalUpdateEvent" onclick="showEditModal(@Html.Raw(Model.EventID), '@Html.Raw(Model.Name)', @Html.Raw(Model.CodeLogin), '@Html.Raw(Model.StartTime)', '@Html.Raw(Model.EndTime)', '@Html.Raw(Model.Address)', '@Html.Raw(Model.EventDescription)', @Html.Raw(Model.TemplateId), '@Html.Raw(Model.ImageURL)')" style="margin-top:20px">
-                    <i class="fa fa-pencil" aria-hidden="true"></i>Edit
+                    <i class="fa fa-pencil" aria-hidden="true"></i>Chỉnh Sửa
                 </button>
             </div>
 
@@ -24,41 +24,41 @@
         <div class="col-sm-6">
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>Login Code</label>
+                    <label>Mã Đăng Nhập</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-code-login">@Html.Raw(Model.CodeLogin)</div>
             </div>
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>Start Time</label>
+                    <label>Thời Gian Bắt Đầu</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-start-time">@Html.Raw(Model.StartTime)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>End Time</label>
+                    <label>Thời Gian Kết Thúc</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-end-time">@Html.Raw(Model.EndTime)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>Address</label>
+                    <label>Địa Điểm</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-address">@Html.Raw(Model.Address)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>Description</label>
+                    <label>Miêu Tả</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-description">@Html.Raw(Model.EventDescription)</div>
             </div>
 
             <div class="row">
                 <div class="col-sm-4 name-title">
-                    <label>Landing Page</label>
+                    <label>Trang Chủ</label>
                 </div>
                 <div class="col-sm-8 evtinfo home-page-template">@Html.Raw(Model.TemplateId)</div>
             </div>
