--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
@@ -87,7 +87,7 @@
 
         <div class="ibox-content col-sm-6 col-md-6">
             <div>
-                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Available</div>
+                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Hiện Có</div>
                 <table class="table table-hover table-bordered" id="tblInteraction">
                     <thead>
                         <tr>
