--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/QA/Index.cshtml
@@ -9,10 +9,10 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Manage QA</h2>
+                <h2 class="col-sm-10">Quản Lý Hỏi Đáp</h2>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addQAModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add QA
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -22,8 +22,8 @@
             <table class="table table-hover table-bordered" id="tblQA">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Function</th>
+                        <th>Tên</th>
+                        <th>Chức Năng</th>
                     </tr>
                 </thead>
             </table>
@@ -37,7 +37,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title">Edit Question & Answer</h2>
+                <h2 class="modal-title">Chỉnh Sửa Hỏi Đáp</h2>
             </div>
             <div class="modal-body">
                 <div class="col-md-12 col-xs-12">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
 
@@ -94,14 +94,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title">Are your sure?</h2>
+                <h2 class="modal-title">Bạn có chắc</h2>
             </div>
             <div class="modal-body">
                 <h3 class="question-del-title"></h3>
             </div>
             <div class="modal-footer">
-                <button id="btn-del-question" type="button" class="btn btn-default question-del-id" data-dismiss="modal">Delete</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-del-question" type="button" class="btn btn-default question-del-id" data-dismiss="modal">Xóa</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
 
@@ -115,14 +115,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title">Are your sure?</h2>
+                <h2 class="modal-title">Bạn có chắc</h2>
             </div>
             <div class="modal-body">
                 <h3 class="comment-del-title"></h3>
             </div>
             <div class="modal-footer">
-                <button id="btn-del-comment" type="button" class="btn btn-default comment-del-id" data-dismiss="modal">Delete</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-del-comment" type="button" class="btn btn-default comment-del-id" data-dismiss="modal">Xóa</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
 
@@ -137,11 +137,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Add QA</h4>
+                <h4 class="modal-title">Thêm Hỏi Đáp</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="col-sm-3 form-control-label">Name:</label>
+                    <label class="col-sm-3 form-control-label">Tên:</label>
                     <div class="col-sm-9 input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-briefcase" aria-hidden="true"></i>
@@ -151,8 +151,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Add</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-add" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-top:5px">Thêm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
@@ -164,14 +164,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h2 class="modal-title">Are your sure?</h2>
+                <h2 class="modal-title">Bạn có chắc</h2>
             </div>
             <div class="modal-body">
                 <h3 class="qa-del-title"></h3>
             </div>
             <div class="modal-footer">
-                <button id="btn-del" type="button" class="btn btn-default qa-del-id" data-dismiss="modal">Delete</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-del" type="button" class="btn btn-default qa-del-id" data-dismiss="modal">Xóa</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
@@ -185,7 +185,7 @@
             <span class="username-content"></span>
             <br />
             <span class="create-time"></span>
-            <button id="btn-delete-question" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteQuestionModal" onclick="delQuestion()">Delete</button>
+            <button id="btn-delete-question" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteQuestionModal" onclick="delQuestion()">Xóa</button>
         </div>
     </div>
 </div>
@@ -197,7 +197,7 @@
         <span id="reply-content"></span>
         <br />
         <span id="reply-time"></span>
-        <button id="btn-delete-comment" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteCommentModal" onclick="delComment()">Delete</button>
+        <button id="btn-delete-comment" class="btn btn-sm btn-reply" data-toggle="modal" data-target="#deleteCommentModal" onclick="delComment()">Xóa</button>
     </div>
 </div>
 
