--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -11,10 +11,10 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Quản lý session</h2>
+                <h2 class="col-sm-10">Quản lý phiên làm</h2>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSessionModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Session
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -47,7 +47,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Thêm session</h4>
+                <h4 class="modal-title">Thêm phiên làm</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
@@ -110,7 +110,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Cập nhật thông tin session</h4>
+                <h4 class="modal-title">Cập nhật thông tin phiên làm</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
@@ -156,7 +156,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="btn-update-session" class="btn btn-primary" data-dismiss="modal">Lưu</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
@@ -243,7 +243,7 @@
                     },
                     success: function (data) {
                         reloadTable();
-                        swal("Thành công!", "Bạn đã update thông tin sesstion thành công", "success");
+                        swal("Thành công!", "Bạn đã update thông tin phiên làm thành công", "success");
                     },
                     error: function (data) {
                         console.log(data);
@@ -274,7 +274,7 @@
                     },
                     success: function (data) {
                         reloadTable();
-                        swal("Success!", "Session has been added successfully", "success");
+                        swal("Thành Công!", "Phiên làm đã được thêm vào thành công", "success");
                     },
                     error: function (data) {
                         console.log(data);
@@ -301,13 +301,13 @@
         function deleteSession(id) {
 
             swal({
-                title: "Are you sure?",
-                text: "You will not be able to recover this imaginary file!",
+                title: "Bạn có chắc?",
+                text: "Bạn có chắc chắn, bạn sẽ không thể phục hồi lại!",
                 type: "warning",
                 showCancelButton: true,
                 confirmButtonClass: "btn-danger",
-                confirmButtonText: "Yes, delete it!",
-                cancelButtonText: "No, cancel plx!",
+                confirmButtonText: "Xóa!",
+                cancelButtonText: "Hủy!",
                 closeOnConfirm: false
             },
                 function () {
@@ -320,11 +320,11 @@
                         },
                         success: function (data) {
                             reloadTable();
-                            swal("Deleted!", "Your session has been deleted successfully", "success");
+                            swal("Xóa!", "Phiên làm đã được xóa thành công", "success");
                         },
                         error: function (data) {
                             console.log(data);
-                            swal("Error", "Please delete all activity of this session", "error");
+                            swal("Có lỗi", "Hãy xóa các hoạt động của phiên làm này", "error");
                         }
                     });
                 });
