--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Voting/Index.cshtml
@@ -10,10 +10,10 @@
     <div class="ibox float-e-margins">
         <div class="ibox-title">
             <div class="row">
-                <h2 class="col-sm-10">Manage Voting</h2>
+                <h2 class="col-sm-10">Bình Chọn</h2>
                 <div class="col-sm-2">
                     <button class="btn btn-primary" type="submit" data-toggle="modal" data-target="#addSpeakerModal" style="margin-top:20px">
-                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Voting
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Thêm
                     </button>
                 </div>
             </div>
@@ -22,9 +22,9 @@
             <table class="table table-hover table-bordered" id="tblVoting">
                 <thead>
                     <tr>
-                        <th>Voting Name</th>
-                        <th>Number option</th>
-                        <th>Function</th>
+                        <th>Tên Bình Chọn</th>
+                        <th>Số lượng bình chọn</th>
+                        <th>Chức Năng</th>
                     </tr>
                 </thead>
             </table>
@@ -40,20 +40,20 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Add Voting</h4>
+                <h4 class="modal-title">Thêm Bình Chọn</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="col-sm-3 form-control-label">Name:</label>
+                    <label class="col-sm-3 form-control-label">Tên:</label>
                     <div class="col-sm-9 input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
-                        <input id="txt-voting-name" type="text" class="form-control" placeholder="Enter Voting's name">
+                        <input id="txt-voting-name" type="text" class="form-control" placeholder="Nhập tên bình chọn">
                     </div>
                 </div>
                 <div class="form-group form-option">
-                    <label class="col-sm-3 form-control-label">Option:</label>
+                    <label class="col-sm-3 form-control-label">Lựa Chọn:</label>
                     <div class="col-sm-9 input-group">
 
                     </div>
@@ -61,7 +61,7 @@
                 <div class="form-group group-option" id="group-option">
 
                     <div class="col-md-10 input-group option-item">
-                        <input type="text" class="form-control voting-option-value" placeholder="Enter Option Value">
+                        <input type="text" class="form-control voting-option-value" placeholder="Thêm lựa chọn">
                         <a class="input-group-btn btn btn-danger btn-remove-option"><i class="fa fa-times" aria-hidden="true"></i></a>
                     </div>
 
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="form-group">
-                    <a class="btn btn-info btn-add-option" id="btn-add-option"><i class="fa fa-plus" aria-hidden="true"></i> Add more option</a>
+                    <a class="btn btn-info btn-add-option" id="btn-add-option"><i class="fa fa-plus" aria-hidden="true"></i>Thêm lựa chọn</a>
                 </div>
 
 
@@ -78,8 +78,8 @@
 
             </div>
             <div class="modal-footer">
-                <button id="btn-add-voting" type="button" class="btn btn-primary" data-dismiss="modal">Add</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-add-voting" type="button" class="btn btn-primary" data-dismiss="modal">Thêm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
 
@@ -94,21 +94,21 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Update Voting</h4>
+                <h4 class="modal-title">Chỉnh Sửa Bình Chọn</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="col-sm-3 form-control-label">Name:</label>
+                    <label class="col-sm-3 form-control-label">Tên:</label>
                     <div class="col-sm-9 input-group">
                         <div class="input-group-addon">
                             <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
-                        <input id="voting-name-update" type="text" class="form-control voting-name-update" placeholder="Enter Voting's name">
+                        <input id="voting-name-update" type="text" class="form-control voting-name-update" >
                         <input type="hidden" id="voting-update-id" value="" />
                     </div>
                 </div>
                 <div class="form-group form-option">
-                    <label class="col-sm-3 form-control-label">Option:</label>
+                    <label class="col-sm-3 form-control-label">Lựa Chọn:</label>
                     <div class="col-sm-9 input-group">
 
                     </div>
@@ -119,16 +119,12 @@
                 </div>
 
                 <div class="form-group">
-                    <a class="btn btn-info btn-add-option-update" id="btn-add-option-update"><i class="fa fa-plus" aria-hidden="true"></i> Add more option</a>
+                    <a class="btn btn-info btn-add-option-update" id="btn-add-option-update"><i class="fa fa-plus" aria-hidden="true"></i>Thêm Lựa Chọn</a>
                 </div>
-
-
-
-
             </div>
             <div class="modal-footer">
-                <button id="btn-update-voting" type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button id="btn-update-voting" type="button" class="btn btn-primary" data-dismiss="modal">Lưu</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
@@ -137,7 +133,7 @@
 <!--Template Option-->
 <div id="template-option">
     <div class="col-md-10 input-group option-item">
-        <input type="text" class="form-control voting-option-value" placeholder="Enter Option Value" value="">
+        <input type="text" class="form-control voting-option-value" placeholder="Nhập lựa chọn" value="">
         <a class="input-group-btn btn btn-danger btn-remove-option"><i class="fa fa-times" aria-hidden="true"></i></a>
         <input type="hidden" value="" class="voting-option-id" />
     </div>
@@ -146,7 +142,7 @@
 <!--Template Option Update-->
 <div id="template-option-update">
     <div class="col-md-10 input-group option-item">
-        <input type="text" class="form-control voting-option-value-update" placeholder="Enter Option Value" value="" data-id="">
+        <input type="text" class="form-control voting-option-value-update" placeholder="Nhập lựa chọn" value="" data-id="">
         <a class="input-group-btn btn btn-danger btn-remove-option"><i class="fa fa-times" aria-hidden="true"></i></a>
     </div>
 </div>
@@ -232,7 +228,7 @@
                     },
                     success: function (data) {
                         reloadTable();
-                        swal("Success!", "Your voting has been added successfully", "success");
+                        swal("Thành Công!", "Bình chọn đã được thêm thành công", "success");
 
                     },
                     error: function (data) {
@@ -278,7 +274,7 @@
                     method: "POST",
                     data: votingUpdate,
                     success: function (data) {
-                        swal("Success!", "Voting has been updated successfully", "success");
+                        swal("Thành Công!", "Bình chọn đã được cập nhật thành công", "success");
                         reloadTable();
                     },
                     error: function (data) {
@@ -320,13 +316,13 @@
 
         function deleteVoting(id) {
             swal({
-                title: "Are you sure?",
-                text: "All voting option will be delete with this voting",
+                title: "Bạn có chắc?",
+                text: "Cuộc bình chọn sẽ bị xóa",
                 type: "warning",
                 showCancelButton: true,
                 confirmButtonClass: "btn-danger",
-                confirmButtonText: "Yes, delete it!",
-                cancelButtonText: "No, cancel plx!",
+                confirmButtonText: "Xóa!",
+                cancelButtonText: "Không!",
                 closeOnConfirm: false
             },
                 function () {
@@ -339,11 +335,11 @@
                         },
                         success: function (data) {
                             reloadTable();
-                            swal("Deleted!", "Your voting has been deleted successfully", "success");
+                            swal("Xóa!", "Cuộc bình chọn đã được xóa thành công", "success");
                         },
                         error: function (data) {
                             console.log(data);
-                            swal("Error", "Can not delete because this voting is template of interaction", "error");
+                            swal("Lỗi", "Không thể xóa", "error");
                         }
                     });
                 });
