Chỉnh lại tab interaction

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
@@ -6,7 +6,7 @@
 
 @{
     int sessionId = 1;
-    //var listSession = Model.Sessions;
+    var listSession = Model.Sessions;
     //sessionId = Model.Sessions.FirstOrDefault().SessionID;
     var votingItemList = Model.Votings;
     var qaItemList = Model.QAs;
@@ -87,34 +87,60 @@
             </div>
         </div>
 
-        <div class="ibox-content col-sm-6 col-md-6">
-            <div>
-                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Hiện Có</div>
-                <table class="table table-hover table-bordered" id="tblInteraction">
-                    <thead>
-                        <tr>
-                            <th>Tên</th>
-                            <th>Loại</th>
-                            <th>Chức Năng</th>
-                        </tr>
-                    </thead>
-                </table>
+        <div class="ibox-content">
+            <!-- Custom Tabs -->
+            <div class="nav-tabs-custom">
+                <ul class="nav nav-tabs">
+                    @{
+                        int i = 0;
+                        foreach (var item in listSession)
+                        {
+                            <li class="@(i == 0 ? "active" : "")" onclick="InitDatatable(@(i), @item.SessionID); ChangeTabIndex(@(i), @item.SessionID)"><a href="#tab_@(i)" data-toggle="tab">@Html.Raw(item.Name)</a></li>
+                            i++;
+                        }
+                    }
+                </ul>
             </div>
-        </div>
-        <div class="ibox-content col-sm-6 col-md-6">
-            <div>
-                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Đang Chạy</div>
-                <table class="table table-hover table-bordered" id="tblInteractionRunning">
-                    <thead>
-                        <tr>
-                            <th>Tên</th>
-                            <th>Loại</th>
-                            <th>Chức Năng</th>
-                        </tr>
-                    </thead>
-                </table>
+            <!--Tab content-->
+            <div class="tab-content">
+                @{
+                    int j = 0;
+                    foreach (var item in listSession)
+                    {
+                        <div class="tab-pane @(j == 0 ? "active" : "")" id="tab_@(j)">
+                            <div class="col-sm-6 col-md-6">
+                                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Available</div>
+                                <table class="table table-hover table-bordered" id="tblInteraction@(j)">
+                                    <thead>
+                                        <tr>
+                                            <th>Tên</th>
+                                            <th>Loại</th>
+                                            <th>Chức Năng</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                            <div class="col-sm-6 col-md-6">
+                                <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Đang Chạy</div>
+                                <table class="table table-hover table-bordered" id="tblInteractionRunning@(j)">
+                                    <thead>
+                                        <tr>
+                                            <th>Tên</th>
+                                            <th>Loại</th>
+                                            <th>Chức Năng</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+                        j++;
+                    }
+                }
+                <!-- /.tab-pane -->
             </div>
+
         </div>
+
     </div>
     <div class="modal fade" id="deleteModal" role="dialog">
         <div class="modal-dialog">
@@ -240,6 +266,9 @@
 
 </div>
 
+<input type="hidden" id="tab-index" value="0" />
+<input type="hidden" id="session-id" value="@(sessionId)" />
+
 @section scripts {
     <script>
         var urlApi = '@curPath';
@@ -325,7 +354,13 @@
                 }
             });
 
-            $('#tblInteraction').DataTable({
+            
+
+        });
+
+
+        function InitDatatable(index, sessionId) {
+            $('#tblInteraction' + index).DataTable({
                 ajax: {
                     url: urlApi + "/api/interaction/getAllInteractionNotRunning/" + sessionId,
                     dataSrc: "",
@@ -359,27 +394,27 @@
                 ]
             });
 
-            $('#tblInteractionRunning').DataTable({
+            $('#tblInteractionRunning' + index).DataTable({
                 ajax: {
                     url: urlApi + "/api/interaction/getIsRunningInteraction/" + sessionId,
                     dataSrc: "",
-                     "bDestroy": true,
+                    "bDestroy": true,
                 },
                 columns: [
                     {
                         name: "Name",
                         render: function (data, type, row) {
-                                return row.interactionName;
+                            return row.interactionName;
                         }
                     },
                     {
                         name: "Type",
                         render: function (data, type, row) {
-                                if (row.votingId != null) {
-                                    return '<p>Voting<p/>';
-                                } else if (row.qaId != null) {
-                                    return '<p>QA<p/>';
-                                }
+                            if (row.votingId != null) {
+                                return '<p>Voting<p/>';
+                            } else if (row.qaId != null) {
+                                return '<p>QA<p/>';
+                            }
                         }
                     },
                     {
@@ -390,8 +425,14 @@
                     }
                 ]
             });
+        }
 
-        });
+
+        function ChangeTabIndex(index, sessionId) {
+            $('#tab-index').val(index);
+            $('#session-id').val(sessionId);
+
+        }
     </script>
 }
 <script src="~/Content/Interaction/Interaction.js"></script>
