--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
@@ -4,7 +4,7 @@
 
 @{
     int sessionId = 1;
-    //var listSession = Model.Sessions;
+    var listSession = Model.Sessions;
     //sessionId = Model.Sessions.FirstOrDefault().SessionID;
     var votingItemList = Model.Votings;
     var qaItemList = Model.QAs;
@@ -84,36 +84,6 @@
                 </div>
             </div>
         </div>
-
-        @*<div class="ibox-content col-sm-6 col-md-6">
-                <div>
-                    <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Available</div>
-                    <table class="table table-hover table-bordered" id="tblInteraction">
-                        <thead>
-                            <tr>
-                                <th>Tên</th>
-                                <th>Loại</th>
-                                <th>Chức Năng</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-            </div>
-            <div class="ibox-content col-sm-6 col-md-6">
-                <div>
-                    <div class="tableHeadText" style="text-align:center; margin-bottom:10px; border-bottom:1px solid">Đang Chạy</div>
-                    <table class="table table-hover table-bordered" id="tblInteractionRunning">
-                        <thead>
-                            <tr>
-                                <th>Tên</th>
-                                <th>Loại</th>
-                                <th>Chức Năng</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
-            </div>*@
-
         <div class="ibox-content">
             <!-- Custom Tabs -->
             <div class="nav-tabs-custom">
